feat: resource null 검증 추가